Fixed hover issue causing proposal cards to jump around due to overflow:visible

--- a/src/components/Proposal/Proposal.scss
+++ b/src/components/Proposal/Proposal.scss
@@ -47,10 +47,10 @@
 	margin-top: 20px;
 	margin-bottom: 0px;
 	display: inline-block;
-  height: 185px;
+	height: 185px;
 	box-shadow: 0 0 15px 0 rgba(133,168,208,.15);
-  overflow: hidden;
-  transition: all .25s ease;
+	overflow: hidden;
+	transition: all .25s ease;
 
   .predictions .boostedAmount, .predictions .centered {
   	opacity: 0;
@@ -68,6 +68,7 @@
 	height: 225px;
 	margin-bottom: -40px;
 	overflow: visible;
+	top: -86px;
 
   .predictions .boostedAmount, .predictions .centered {
   	opacity: 1;
@@ -1542,6 +1543,9 @@ button.disabled {
 .boostedAmount {
 	display: block;
 	margin-top: 10px;
+	min-height: 8px;
+	font-size: 11px;
+	text-align: center;
 	padding-top: 43px;
 }
 
